[update] Buses added, some forever logic included (but sorta broken)

--- a/front-end/src/assets/css/tiles/event.sass
+++ b/front-end/src/assets/css/tiles/event.sass
@@ -45,6 +45,7 @@ h2
 
 .event__description
   color: $color--brick-red
+  font-family: Open Sans
   font-size: 38px
   font-style: italic
   line-height: (46/38)
