--- a/front-end/src/assets/css/tiles/locations.sass
+++ b/front-end/src/assets/css/tiles/locations.sass
@@ -29,10 +29,8 @@
 
   h2
     color: $color--brick-red
-    font-size: 18px
-    font-weight: bold
-    letter-spacing: 3px
     margin-bottom: 10px
+    +small-caps;
 
     b
       color: $color--peach-orange
@@ -56,16 +54,13 @@
   p
     bottom: 0
     color: $color--brick-red
-    font-size: 18px
-    font-weight: bold
     left: 0
-    letter-spacing: 3px
     margin-bottom: 10px
     position: absolute
     padding: $dimensions--gutter
     right: 0
+    +small-caps;
     text-align: center
-    text-transform: uppercase
 
     b
       color: $color--coral
