--- a/front-end/src/assets/css/tiles/logo.sass
+++ b/front-end/src/assets/css/tiles/logo.sass
@@ -2,14 +2,13 @@
   background: $color--coral
   bottom: 0
   color: $color--brick-red
-  font-size: 18px
-  font-weight: bold
   height: rows(1, true)
   left: cols(4)
   letter-spacing: 3px
   margin: 0
   padding-top: 55px
   position: absolute
+  +small-caps
   text-align: center
   text-transform: uppercase
   top: rows(8)
