--- a/front-end/src/assets/css/tiles/weather.sass
+++ b/front-end/src/assets/css/tiles/weather.sass
@@ -15,9 +15,7 @@
     position: absolute
 
   h2
-    font-size: 18px
-    letter-spacing: 3px
-    text-transform: uppercase
+    +small-caps
 
   h2,
   p
