Tons of new stuff, including API caching

--- a/front-end/src/assets/css/app.sass
+++ b/front-end/src/assets/css/app.sass
@@ -4,5 +4,5 @@
 @import 'tiles/event'
 @import 'tiles/weather'
 @import 'tiles/logo'
-@import 'tiles/locations'
-@import 'tiles/buses'
+@import 'tiles/location'
+@import 'tiles/buses/index'
