--- a/front-end/src/assets/css/base/mixins/_index.sass
+++ b/front-end/src/assets/css/base/mixins/_index.sass
@@ -1,2 +1,6 @@
-@import 'center'
-@import 'small-caps'
+@import center
+@import fill
+@import small-caps
+@import smooth
+@import tracking
+@import vibrate
