--- a/front-end/src/assets/css/tiles/weather.sass
+++ b/front-end/src/assets/css/tiles/weather.sass
@@ -67,6 +67,7 @@
   h2
     color: $color--coral
     padding: 45px 25px
+    +tracking(100)
 
   p
     bottom: 55px
@@ -75,6 +76,7 @@
     left: 0
     position: absolute
     right: 0
+    +tracking(100)
 
   canvas
     +center(horizontal)
