--- a/server/templates/index-production.hbs
+++ b/server/templates/index-production.hbs
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script src="/assets/js/app.js"></script>
+    <script src="/assets/js/app-production.js"></script>
   </body>
 </html>
