--- a/front-end/src/assets/css/tiles/location.sass
+++ b/front-end/src/assets/css/tiles/location.sass
@@ -1,4 +1,4 @@
-.locations
+.location
   background: $color--mulberry-road
   height: rows(1, true)
   left: 0
@@ -6,7 +6,7 @@
   position: absolute
   width: cols(4)
 
-.locations__description
+.location__description
   bottom: 0
   left: 0
   overflow: hidden
@@ -14,37 +14,40 @@
   top: 0
   width: 66.666%
 
-.locations__description__table
+.location__description__table
   display: table
   height: 100%
   position: absolute
   width: 100%
 
-.locations__description__cell
+.location__description__cell
   display: table-cell
   height: 100%
-  padding: $dimensions--gutter 0 0 $dimensions--gutter
+  padding: 0 $dimensions--gutter
   vertical-align: middle
   width: 100%
 
   h2
     color: $color--brick-red
     margin-bottom: 10px
-    +small-caps;
+    +small-caps
+
+    // override small-caps height
+    line-height: 1
 
     b
       color: $color--peach-orange
       display: block
       font-size: 40px
       font-weight: black
-      margin-top: 20px
+      margin-top: 15px
 
-.locations__closing-time
+.location__closing-time
   color: $color--peach-orange
   font-size: 30px
   text-transform: uppercase
 
-.locations__directions
+.location__directions
   bottom: 0
   position: absolute
   right: 0
@@ -55,13 +58,32 @@
     bottom: 0
     color: $color--brick-red
     left: 0
-    margin-bottom: 10px
     position: absolute
     padding: $dimensions--gutter
     right: 0
     +small-caps;
     text-align: center
 
+    &.-small
+      padding: $dimensions--gutter ($dimensions--gutter / 2)
+
     b
       color: $color--coral
       margin-right: 7px
+
+.location__arrow
+  height: 60%
+  left: 0
+  position: absolute
+  right: 0
+  top: 10px
+  transform-origin: 50% 50%
+  transition: transform 1.5s ease-in-out
+
+  svg
+    fill: $color--coral
+    left: 50%
+    position: absolute
+    top: 50%
+    transform-origin: 50% 50%
+    transition: transform 1.5s ease-in-out
