--- a/server/templates/index-production.hbs
+++ b/server/templates/index-production.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Busiest Board</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="content"></div>
