Tweaks for cursor and icon shadowing

--- a/front-end/src/assets/css/base/_index.sass
+++ b/front-end/src/assets/css/base/_index.sass
@@ -9,10 +9,12 @@ body
 main
   background: $color--mulberry-road
   box-shadow: 0 0 250px $color--tamarind
+  cursor: none
   font-family: Nexa
   height: 1920px
   letter-spacing: 0.1em
   margin: 0 auto
+  overflow: hidden
   position: relative
   +tracking(25)
   width: 1080px
