Tweaking media queries to fix firefox bug

--- a/front-end/src/assets/css/base/_index.sass
+++ b/front-end/src/assets/css/base/_index.sass
@@ -23,7 +23,7 @@ main
   background: url(../images/background.jpg) 50% 50% no-repeat
   background-size: cover
 
-@media (width: 1920px) and (height: 1080px)
+@media (width: 1920px) and (height: 1080px), (width: 1920px) and (height: 1079px)
   main
     +smooth
     transform-origin: 50% 50%
